server exits when receives strange message
Submitted by Pavel Grunt
Assigned to Spice Bug List
Description
Created attachment 126969 backtrace
I tried to connect with the spice-html5 client through websockify to the server (git commit 3e51627991f6315a795a50e7df845904c70514a2) and server exited:
SpiceWorker-CRITICAL **: red-worker.c:113:common_alloc_recv_buf: unexpected message size 149326 (max is 1024)
The actual bug is in the websockify proxy/html5 client but it would be better if server just disconnects the client.
Attachment 126969, "backtrace":
bt.txt